--- a/src/components/base/Mobile.css
+++ b/src/components/base/Mobile.css
@@ -4,7 +4,7 @@
   /* height: 100%; */
   /* overflow: hidden !important; */
   position: relative;
-  padding-bottom: 10%;
+  /* padding-bottom: 10%; */
 }
 
 #mobile .base_container {
